tests/valid/return_expr_of_type_void_from_function.ar
fn main() {
    ret_void()
}

fn ret_void() { }
