tests/invalid/missing_semicolon.ar
fn get(n: usize)
{
    let i = n
}
